[package]
name = "chat"
version = "0.1.0"
authors = ["四条眉毛 <fourfishxiake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1", features=["full", "tracing"] }
tokio-util = { version="0.6.3", features=["full"] }
tokio-stream = { version="0.1" }
futures = { version = "0.3.0", features = ["thread-pool"]}

tracing = "0.1"
tracing-subscriber = "0.2"
dashmap ="4.0.2"
tokio-tungstenite={ version="*", features=['rustls-tls'] }
tungstenite="*"
url = "2.0.0"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel="0.3.13"
argh = "0.1.5"
tokio-rustls="0.22.0"

[[example]]
name = "client"